src/components/LearningCenterCard/LearningCenterCard.module.css
.container {
  width: 350px;
  padding: 10px;
  border-left: 1px solid lightgray;
}

.usa-card__header {
  height: 48px;
  padding: 12px 16px 12px 16px;
}

.header-label {
  font-family: var(--Font-Primary);
  font-weight: 400;
  color: #002e6d;
  font-size: 17px;
  letter-spacing: 0;
  line-height: normal;
}

.title {
  color: #002e6d;
  font-family: var(--Font-Primary);
  font-size: 22px;
  font-weight: 600;
  line-height: 26px;
  word-wrap: break-word;
  flex: 1 1 0;
  margin-bottom: 8px;
}

.description {
  font-family: var(--Font-Primary);
  font-weight: 400;
  color: var(--Base-base-dark, #565c65);
  font-size: 17px;
  line-height: 22px;
}

.usa-card__container {
  width: 350px;
  border-radius: 8px;
  border: 1px solid var(--Neutrals-Light-Gray-4, #e0e0e0);
  background: #ffffff;
  margin: unset;
  box-shadow: 0 7px 15px 0 rgba(27, 30, 41, 0.07);
}

.usa-card__container_four {
  width: 350px;
  border-radius: 8px;
  border: 1px solid var(--Neutrals-Light-Gray-4, #e0e0e0);
  background: #ffffff;
  margin: unset;
  box-shadow: 0 7px 15px 0 rgba(27, 30, 41, 0.07);
  padding-bottom: 20px;
}

.video-title {
  text-align: start;
  font-family: var(--Font-Secondary);
  font-size: 17px;
  font-weight: 700;
  width: 195px;
  color: var(--Brand-Primary-SBA-Blue);
}

.video-subtitle {
  font-family: var(--Font-Primary);
  font-size: 15px;
  font-weight: 400;
  font-style: italic;
  width: 195px;
  color: var(--Base-base-dark, #565c65);
}

.header-label {
  font-family: var(--Font-Primary);
  font-weight: 400;
  color: #002e6d;
  font-size: 17px;
  letter-spacing: 0;
  line-height: normal;
}

.video-container {
  padding: 16px;
  line-height: normal;
  border-bottom: 1px solid var(--Base-base-lighter);
}

.view-course-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: inset 0 0 0 2px #007dbc;
  color: var(--Brand-Secondary-Bright-Blue);
  text-align: center;
  font-family: var(--Font-Secondary);
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 90%; /* 14.4px */
}

.view-course-btn:active {
  outline: none;
  color: var(--Brand-Secondary-Bright-Blue);
  text-align: center;
  font-family: var(--Font-Secondary);
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 90%; /* 14.4px */
}

.view-course-btn:hover {
  outline: none;
  color: var(--Brand-Secondary-Bright-Blue);
  text-align: center;
  font-family: var(--Font-Secondary);
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 90%; /* 14.4px */
}

.view-course-btn:focus {
  outline: none;
  color: var(--Brand-Secondary-Bright-Blue);
  text-align: center;
  font-family: var(--Font-Secondary);
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 90%; /* 14.4px */
}

.view-course-text {
  padding-right: 10px;
  color: var(--Brand-Secondary-Bright-Blue);
}

.view-course-icon {
  width: 24px;
  height: 24px;
  fill: var(--Brand-Secondary-Bright-Blue);
}

.card__footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.video-row__image {
}

.header-sba_logo {
  height: 20px;
  margin-right: 10px;
  padding-right: 10px;
}

.header-launch-href {
  text-decoration: none;
  color: unset;
  height: 20px;
}

.content-image {
  width: 350px;
  height: 358px;
}

.video-right {
  display: flex;
  width: 24px;
  height: 24px;
  padding: 6px 8px 6px 8.59px;
  justify-content: center;
  align-items: center;
}

.video-href {
  /*text-decoration: none*/
  /*color: unset;*/
  background: transparent;
  border: unset;
  width: 100%;
}

.video-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.video-icon {
  height: 40px;
  margin-right: 10px;
}

.next-icon {
  height: 21px;
  margin-left: 10px;
}

.usa-card__heading {
  padding: 0;
}

.title_container {
  padding: 16px;
  border-bottom: 1px solid var(--Base-base-lighter);
}

.usa-card__footer {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px 16px 20px 16px;
}

@media (max-width: 768px) {
  .grid-row {
    flex-direction: column;
  }

  .grid-col-auto {
    order: 3;
    flex: 0 0 auto;
  }

  .grid-col {
    order: 2;
    flex: 0 0 auto;
  }
}

.launchIcon {
  color: var(--Brand-Primary-SBA-Blue);
  fill: var(--Brand-Primary-SBA-Blue);
}

